--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<h1>Hello word!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      div {
+        margin-bottom: 64px;
+      }
+      .first-col {
+        padding-right: 40px;
+        white-space: nowrap;
+      }
+      .text {
+        font-style: italic;
+        color: #666666;
+      }
+    </style>
+    <title>Audio Samples from "DPP-TTS: Diversifying prosodic features via determinantal point processes"</title>
+  </head>
+  <body>
+    
+  </body>
+</html>
