--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
     <title>Audio Samples from "DPP-TTS: Diversifying prosodic features via determinantal point processes"</title>
   </head>
   <body>
-    
+    <div>
+      <a name="ss"><h2>Single Speaker (LJ Speech Dataset)</h2></a>
+      <hr>
+      <table>
+        <tbody>
+          <tr>
+          <td>
+            <h4>Text</h4>
+          </td>
+          <td class="text">
+            that not more than one bottle of wine or one quart of beer could be issued at one time. No account was taken of the amount of liquors admitted in one day,
+          </td>
+          <td class="text">
+            The prisoner had nothing to deal with but wooden panels, and by dint of cutting and chopping he got both the lower panels out.
+          </td>
+          <td class="text">
+            have now come into general use and are obviously a great improvement on the ordinary "modern style" in use in England, which is in fact the Bodoni type
+          </td>
+          <td class="text">
+            At two:thirty-eight p.m., Eastern Standard Time, Lyndon Baines Johnson took the oath of office as the thirty-sixth President of the United States.
+          </td>
+          <td class="text">
+            The boy declared he saw no one, and accordingly passed through without paying the toll of a penny.
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
