--- a/index.html
+++ b/index.html
@@ -27,19 +27,16 @@
             <h4>Text</h4>
           </td>
           <td class="text">
-            that not more than one bottle of wine or one quart of beer could be issued at one time. No account was taken of the amount of liquors admitted in one day,
+            provided only that their security was not jeopardized, and dependent upon the enforcement of another new rule,
           </td>
           <td class="text">
-            The prisoner had nothing to deal with but wooden panels, and by dint of cutting and chopping he got both the lower panels out.
+            and stated that in his opinion Newgate, as the common jail of Middlesex, was wholly inadequate to the proper confinement of its.
           </td>
           <td class="text">
-            have now come into general use and are obviously a great improvement on the ordinary "modern style" in use in England, which is in fact the Bodoni type
+            Nor did the methods by which they were perpetrated greatly vary from those in times past.
           </td>
           <td class="text">
-            At two:thirty-eight p.m., Eastern Standard Time, Lyndon Baines Johnson took the oath of office as the thirty-sixth President of the United States.
-          </td>
-          <td class="text">
-            The boy declared he saw no one, and accordingly passed through without paying the toll of a penny.
+            feeling, as he said, that he might as well be shot or hanged as remain in such a state.
           </td>
         </tr>
         </tbody>
