--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
             feeling, as he said, that he might as well be shot or hanged as remain in such a state.
           </td>
         </tr>
+        <tr>
+          <td class="first-col">DPP-TTS-d</td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-3.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-12.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-14.wav"></audio></td>
+        </tr>
         </tbody>
       </table>
     </div>
