--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@
             and stated that in his opinion Newgate, as the common jail of Middlesex, was wholly inadequate to the proper confinement of its.
           </td>
           <td class="text">
-            Nor did the methods by which they were perpetrated greatly vary from those in times past.
+            he had his pockets filled with bread and cheese, and it was generally supposed that he had come a long distance to see the fatal.
           </td>
           <td class="text">
-            feeling, as he said, that he might as well be shot or hanged as remain in such a state.
+            and measures taken to arrest them when their plans were so far developed that no doubt could remain as to their guilt.
           </td>
         </tr>
         <tr>
           <td class="first-col">DPP-TTS-d</td>
           <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-0.wav"></audio></td>
           <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-3.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-12.wav"></audio></td>
-          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-14.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-8.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-13.wav"></audio></td>
+        </tr>
+        <tr>
+          <td class="first-col">DPP-TTS-p</td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-p-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-p-3.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-p-8.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-p-13.wav"></audio></td>
         </tr>
         </tbody>
       </table>
