--- a/index.html
+++ b/index.html
@@ -53,7 +53,49 @@
           <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-p-8.wav"></audio></td>
           <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-p-13.wav"></audio></td>
         </tr>
+        <tr>
+          <td class="first-col">Flowtron-tau=1.0</td>
+          <td><audio controls="" preload="none"><source src="wavs/flowtron-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/flowtron-3.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/flowtron-8.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/flowtron-13.wav"></audio></td>
+        </tr>
+        <tr>
+          <td class="first-col">VITS-sigma=1.2</td>
+          <td><audio controls="" preload="none"><source src="wavs/vitsd-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/vitsd-3.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/vitsd-8.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/vitsd-13.wav"></audio></td>
+        </tr>
+        <tr>
+          <td class="first-col">VITS-tau=1.2</td>
+          <td><audio controls="" preload="none"><source src="wavs/vits-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/vits-3.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/vits-8.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/vits-13.wav"></audio></td>
+        </tr>
+        <tr>
+          <td class="first-col">DiffSpeech</td>
+          <td><audio controls="" preload="none"><source src="wavs/diff-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/diff-3.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/diff-8.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/diff-13.wav"></audio></td>
+        </tr>
+        <tr>
+          <td class="first-col">SyntaSpeech</td>
+          <td><audio controls="" preload="none"><source src="wavs/synta-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/synta-3.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/synta-8.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/synta-13.wav"></audio></td>
+        </tr>
         </tbody>
+      </table>
+    </div>
+    <div>
+      <a name="ss"><h2>Paragraph</h2></a>
+      <hr>
+      <table>
+        
       </table>
     </div>
   </body>
