--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
       <a name="ss"><h2>Paragraph</h2></a>
       <hr>
       <table>
-        
+      <tr>
+        <td>
+          <h4>Text: Known individually and collectively as Shai-Hulud, the sandworms are these supermassive beings that plow through the deserts of Arrakis, consuming everything that dares venture unprepared into their territory.
+The worms are what make harvesting spice so difficult because they tend to eat whatever tools off-worlders use to mine it. They are also sacred to the Fremen, who seem to know ways to navigate around them, and, somehow, they’re linked to the creation of spice.
+Think of them as big honking metaphors for the sublime powers of nature that loom beyond human understanding, like a desert full of Moby Dicks.</h4>
+        </td>
+      </tr>
       </table>
     </div>
   </body>
