--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@ The worms are what make harvesting spice so difficult because they tend to eat w
 Think of them as big honking metaphors for the sublime powers of nature that loom beyond human understanding, like a desert full of Moby Dicks.</h4>
         </td>
       </tr>
+      <tr>
+          <td class="first-col">DPP-TTS-d</td>
+          <td><audio controls="" preload="none"><source src="wavs/dpp-ttS-d-para.wav"></audio></td>
+      </tr>
+      <tr>
+        <td class="first-col">DPP-TTS-p</td>
+        <td><audio controls="" preload="none"><source src="wavs/dpp-ttS-p-para.wav"></audio></td>
+      </tr>
+      <tr>
+        <td class="first-col">VITS-sigma=1.2</td>
+        <td><audio controls="" preload="none"><source src="wavs/vitsd-para.wav"></audio></td>
+      </tr>
+      <tr>
+        <td class="first-col">VITS-tau=1.2</td>
+        <td><audio controls="" preload="none"><source src="wavs/vits-para.wav"></audio></td>
+      </tr>
       </table>
     </div>
   </body>
