--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Think of them as big honking metaphors for the sublime powers of nature that loo
       </tr>
       <tr>
           <td class="first-col">DPP-TTS-d</td>
-          <td><audio controls="" preload="none"><source src="wavs/dpp-ttS-d-para.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/dpp-tts-d-para.wav"></audio></td>
       </tr>
       <tr>
         <td class="first-col">DPP-TTS-p</td>
