--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@ Think of them as big honking metaphors for the sublime powers of nature that loo
         </td>
       </tr>
       <tr>
-          <td class="first-col">DPP-TTS-d</td>
+          <td class="first-row">DPP-TTS-d</td>
           <td><audio controls="" preload="none"><source src="wavs/dpp-tts-d-para.wav"></audio></td>
       </tr>
       <tr>
         <td class="first-col">DPP-TTS-p</td>
-        <td><audio controls="" preload="none"><source src="wavs/dpp-ttS-p-para.wav"></audio></td>
+        <td><audio controls="" preload="none"><source src="wavs/dpp-tts-p-para.wav"></audio></td>
       </tr>
       <tr>
         <td class="first-col">VITS-sigma=1.2</td>
