--- a/index.html
+++ b/index.html
@@ -102,22 +102,24 @@ The worms are what make harvesting spice so difficult because they tend to eat w
 Think of them as big honking metaphors for the sublime powers of nature that loom beyond human understanding, like a desert full of Moby Dicks.</h4>
         </td>
       </tr>
-      <tr>
-          <td class="first-row">DPP-TTS-d</td>
-          <td><audio controls="" preload="none"><source src="wavs/dpp-tts-d-para.wav"></audio></td>
-      </tr>
-      <tr>
-        <td class="first-col">DPP-TTS-p</td>
-        <td><audio controls="" preload="none"><source src="wavs/dpp-tts-p-para.wav"></audio></td>
-      </tr>
-      <tr>
-        <td class="first-col">VITS-sigma=1.2</td>
-        <td><audio controls="" preload="none"><source src="wavs/vitsd-para.wav"></audio></td>
-      </tr>
-      <tr>
-        <td class="first-col">VITS-tau=1.2</td>
-        <td><audio controls="" preload="none"><source src="wavs/vits-para.wav"></audio></td>
-      </tr>
+      <thead>
+          <th>DPP-TTS-d</th>
+          <th>DPP-TTS-p</th>
+          <th>VITS-sigma=1.2</th>
+          <th>VITS-tau=1.2</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td><audio controls class="audio-player" preload="metadata">
+              <source src="wavs/dpp-tts-d-para.wav" type="audio/wav"></audio></td>
+          <td><audio controls class="audio-player" preload="metadata">
+              <source src="wavs/dpp-tts-p-para.wav" type="audio/wav"></audio></td>
+          <td><audio controls class="audio-player" preload="metadata">
+              <source src="wavs/vitsd-para.wav" type="audio/wav"></audio></td>
+          <td><audio controls class="audio-player" preload="metadata">
+              <source src="wavs/vits-para.wav" type="audio/wav"></audio></td>
+        </tr>
+      </tbody>
       </table>
     </div>
   </body>
