--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
           </td>
         </tr>
         <tr>
+          <td class="first-col">Ground Truth</td>
+          <td><audio controls="" preload="none"><source src="wavs/gt-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/gt-3.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/gt-8.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/gt-13.wav"></audio></td>
+        </tr>
+        <tr>
           <td class="first-col">DPP-TTS-d</td>
           <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-0.wav"></audio></td>
           <td><audio controls="" preload="none"><source src="wavs/DPP-TTS-d-3.wav"></audio></td>
