--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Audio samples from "DPP-TTS: Diversifying prosodic features of speech via determinantal point processes"</title>
     <style>
       div {
         margin-bottom: 64px;
@@ -14,7 +15,6 @@
         color: #666666;
       }
     </style>
-    <title>Audio Samples from "DPP-TTS: Diversifying prosodic features via determinantal point processes"</title>
   </head>
   <body>
     <div>
