--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </style>
   </head>
   <body>
+    <article>
+      <header>
+        <h1>Audio samples from "DPP-TTS: Diversifying prosodic features of speech via determinantal point processes"</h1>
+      </header>
+    </article>
     <div>
       <a name="ss"><h2>Single Speaker (LJ Speech Dataset)</h2></a>
       <hr>
