--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </tr>
         <tr>
           <td class="first-col">DiffSpeech</td>
-          <td><audio controls="" preload="none"><source src="wavs/diff-0.wav"></audio></td>
+          <td><audio controls="" preload="none"><source src="wavs/diff-new-0.wav"></audio></td>
           <td><audio controls="" preload="none"><source src="wavs/diff-3.wav"></audio></td>
           <td><audio controls="" preload="none"><source src="wavs/diff-8.wav"></audio></td>
           <td><audio controls="" preload="none"><source src="wavs/diff-13.wav"></audio></td>
